# c5autobuy

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REFACTOR_EXECUTION_PLAN.md  autobuy.py  csgo_items.db  csgo_items_export_20260106_165125.xlsx  database_setup.py  excal.py  main_ui_account_center_desktop.js  main_ui_node_desktop.js  main_ui_node_desktop_local_debug.js  pyproject.toml  run_app.py  run_app_local_debug.py  test.wasm  tmp_debug_app.db  tmp_ws_debug.db  xsign.py
account/: account_1003446248.json  account_1003936745.json  account_1003949003.json  account_1004008548.json  account_1004008551.json
api_responses/: response_1_20260206_090903_749.txt  response_2_20260206_090904_801.txt
app_backend/: __init__.py  main.py
app_backend/api/: __init__.py  program_access_guard.py
app_desktop_web/: electron-builder-paths.cjs  electron-builder-preflight.cjs  electron-builder.config.cjs  electron-main.cjs  electron-main.js  electron-preload.cjs  electron-preload.js  electron_runtime.js  electron_runtime_mode.cjs  index.html  package-lock.json  package.json  program_access_config.cjs  python_backend.js  python_runtime_bootstrap.js  python_runtime_config.cjs  python_runtime_resources.cjs  renderer_diagnostics_logger.cjs  vite.config.js  window_state.js
app_frontend/: main.py
c5_layered/: __init__.py  bootstrap.py
config/: product_configs.json
docs/: account-browser-usage.md  auth-hardening-prompt.md
program_admin_console/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
调试/: api查询.py  test.py  xsigntest.py  默认配置附着登录验真.ps1
(+714 files in other folders)
