[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "c5-account-center"
version = "0.1.0"
description = "Phase 1 account center for the C5 desktop project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.34,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.10,<3.0",
    "httpx>=0.28,<1.0",
    "aiohttp>=3.11,<4.0",
    "selenium>=4.28,<5.0",
    "pytz>=2024.1,<2027.0",
    "websockets>=15.0,<17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
]

[tool.setuptools.packages.find]
include = ["app_backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
